--- a/sample_config.env
+++ b/sample_config.env
@@ -7,6 +7,6 @@ DATABASE_URL= https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git
 REDIS_URI= redis-12108.c8.us-east-1-4.ec2.cloud.redislabs.com:12108
 REDIS_PASSWORD= UF5CuBX3cJFUZAZYahUz4ewjyutY5Cqb
 BOTLOG_CHATID= -1001300787749
-BOT_TOKEN= 5245012700:AAFvOT_XmlL6n75rQb8aE0b04FwNt46sqbI
-BOT_USERNAME= @NomX_bot
+BOT_TOKEN= 5677639513:AAHAOehNtWKdwCfBchCosBX0cqQTipGEPwE
+BOT_USERNAME=  @n0meee_bot
 PM_AUTO_BAN= True
